# cfd

./: .clang-format  .gitignore  .pdm-python  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  vcpkg.json
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake
example/: CMakeLists.txt
include/cfd/: cfd.hxx
naca/: naca.ipynb
source/: cfd.cxx  lib.cxx  lib.hxx  main.cxx  python.cxx
src/: main.py
src/cfd/: __init__.py  eulerian.py  grids.py  quiver.py  solver.py  solver2.py  space.py  utils.py
src/cxx/: cfd.cxx  node.cxx  python.cxx
src/include/cfd/: cfd.hxx  node.hxx
test/: CMakeLists.txt
test/source/: cfd_test.cpp  cfd_test.cxx
workflows/: ci.yml
