[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = "setup.py"
python_version = "3.7"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
debug = [
    "ipython>=8.24.0",
]
dev = [
    "setuptools>=69.5.1",
    "ninja>=1.11.1.1",
    "pip>=24.0",
]
[project]
name = "cfd"
version = "0.1.0"
description = "Automated Airfoil Design"
authors = [
    {name = "Adarsh Kumar", email = "git@akxcix.com"},
    {name = "RenChu Wang", email = "patrick1031wang@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

