[project]
name = "cfd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Adarsh Kumar", email = "git@akxcix.com"},
    {name = "RenChu Wang", email = "rwang746@gatech.edu"},
]
dependencies = [
    "cmaes>=0.10.0",
    "numpy>=1.26.4",
    "torch>=2.3.0",
    "matplotlib>=3.8.4",
    "alive-progress>=3.1.5",
    "ax-platform>=0.3.7",
    "fire>=0.6.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
